
Project hosting: https://launchpad.net/tomdroid/

Please report bugs to: https://bugs.launchpad.net/tomdroid

Mailing list: tomdroid-dev@lists.launchpad.net 
Join it at: https://launchpad.net/~tomdroid-dev

For more details and developer visible changes see the ChangeLog

Version 0.4.1 - "I didn't do it! (fixed with duct tape) released on <releaseDate>
* Some strings translated to French (Benoit Soyeux)

Version 0.4.0 - "I didn't do it!" released on 2010-10-09
Android 1.6 or later required
* One-way Note Synchronization! Two providers for now: Tomboy Web and SD Card 
  (Benoit Garret, Rodja Trappe)
* Vastly modernized and improved UI (Rodja Trappe, Guilherme Salgado, Matthew 
  Stevenson, #549643)
* Notebook templates are now hidden from note list (Benoit Garret, 
  Guilherme Salgado, #360732)
* Fixed warning dialog reappearing after phone rotation (Benoit Garret, #541793)
* New note on first run giving some useful instructions (#588800)

Version 0.3.1 - fundationem (fixed with a tie wrap)
* Fixed important parsing issue with notes in +xx:xx timezones (#520543)
* Fixed error-reporting of date parsing errors
* Only one error displayed per synchronization attempts instead of one per note

Version 0.3.0 - fundationem
Android 1.5 or later required
* Instant startup -- database back-end instead of files (Benoît Garret)
* New "Sync from SD Card" menu item that will populate the notes database with
  the notes in tomdroid/ on the SD card (Benoît Garret)
* Significantly smaller App (went from ~380Kb to ~35Kb)
* Note list is now sorted showing last modified notes first
* Notification when "Sync from SD Card" is complete
* Note title no longer shown in the note text
* Fixed note parsing errors (#364850, #483101)
* Fixed phone numbers in note titles (#512204)
* Improved help messages
* Improved error reporting to the user
* Removed the "Load from Web" not-so-useful feature (Benoît Garret)

Version 0.2.0 - this is all wrong