@@ -87,8 +87,7 @@ public class SnowySyncService extends SyncService implements ServiceAuth {
 					authUri = auth.getAuthorizationUrl(server);
 					
 				} catch (UnknownHostException e) {
-					if (Tomdroid.LOGGING_ENABLED)
-						Log.e(TAG, "Internet connection not available");
+					Log.e(TAG, "Internet connection not available");
 					sendMessage(NO_INTERNET);
 				}
 				
@@ -113,15 +112,13 @@ public class SnowySyncService extends SyncService implements ServiceAuth {
 					OAuthConnection auth = getAuthConnection();
 					boolean result = auth.getAccess(uri.getQueryParameter("oauth_verifier"));
 
-					if (Tomdroid.LOGGING_ENABLED) {
-						if (result) {
-							Log.i(TAG, "The authorization process is complete.");
-						} else
-							Log.e(TAG, "Something went wrong during the authorization process.");
+					if (result) {
+						if (Tomdroid.LOGGING_ENABLED) Log.i(TAG, "The authorization process is complete.");
+					} else {
+						Log.e(TAG, "Something went wrong during the authorization process.");
 					}
 				} catch (UnknownHostException e) {
-					if (Tomdroid.LOGGING_ENABLED)
-						Log.e(TAG, "Internet connection not available");
+					Log.e(TAG, "Internet connection not available");
 					sendMessage(NO_INTERNET);
 				}
 				
@@ -198,12 +195,12 @@ public class SnowySyncService extends SyncService implements ServiceAuth {
 					setSyncProgress(100);
 					
 				} catch (JSONException e1) {
-					if (Tomdroid.LOGGING_ENABLED) Log.e(TAG, "Problem parsing the server response", e1);
+					Log.e(TAG, "Problem parsing the server response", e1);
 					sendMessage(PARSING_FAILED);
 					setSyncProgress(100);
 					return;
 				} catch (java.net.UnknownHostException e) {
-					if (Tomdroid.LOGGING_ENABLED) Log.e(TAG, "Internet connection not available");
+					Log.e(TAG, "Internet connection not available");
 					sendMessage(NO_INTERNET);
 					setSyncProgress(100);
 					return;
